--- a/sass/partials/_entertain.scss
+++ b/sass/partials/_entertain.scss
@@ -62,6 +62,12 @@
       margin: 30px auto 0;
       height: auto;
     }
+    @include small-screens {
+      width: 95%;
+      margin: 30px auto 0;
+      height: auto;
+      border-radius: 10%;
+    }
   }
 
   &__item__description {
