--- a/sass/partials/_form.scss
+++ b/sass/partials/_form.scss
@@ -75,6 +75,10 @@
         outline: none;
         border: 6px solid rgb(126, 0, 164);
         box-shadow: 0px 0px 20px rgb(126, 0, 164);
+        @include medium-screens {
+          border: 4px solid rgb(126, 0, 164);
+          box-shadow: 0px 0px 12px rgb(126, 0, 164);
+        }
       }
     }
 
