--- a/sass/partials/_monuments.scss
+++ b/sass/partials/_monuments.scss
@@ -6,10 +6,9 @@
     text-align: center;
     transition: transform 1.5s ease;
     margin: 40px 0;
-    padding: 10px;
-    z-index: 0;
+    padding: 0 10px;
     @include medium-screens {
-      margin: 0;
+      margin: 60px 0 0 0;
       padding: 0;
     }
 
